fixed font size too big

--- a/main.css
+++ b/main.css
@@ -10,7 +10,7 @@ html, body {
 }
 nav {
     width:100%;
-    height:6vh;
+    height:10vh;
     position:fixed;
     z-index:8;
     top: 0;
@@ -137,7 +137,7 @@ nav li {
     align-items:center;
     align-self: center;
     font-family: quicksand;
-    font-size: 24px;
+    font-size: 16px;
     text-align: justify;
 }
 
